fix: drop covid banner, better bottom page spacing (#657)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -230,7 +230,7 @@ pre code {
 }
 
 div#container {
-  padding-bottom: 8em;
+  padding-bottom: 10em;
   position:relative;
   height: auto !important;
   height: 100%; // IE 6
